# AlgCom-Practica-2

./: ShipDetectorTest.py  main.py  pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
