[tool.poetry]
name = "algcom-practica-2"
version = "0.1.0"
description = "Practica 2 de Algoritmia i Complexitat del año 2022"
authors = ["Aitor Corchero Rodríguez <aitorcorchero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
findpeaks = "^2.4.0"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
